Fix z-index too much

--- a/frontend/src/layouts/styles/Header.module.css
+++ b/frontend/src/layouts/styles/Header.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0px 20px;
-    z-index: 200;
+    z-index: 10;
 }
 
 .leftItems {
